--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "ammap3": "^3.21.14",
     "approximate-number": "^2.0.0",
     "asva-executors": "^0.1.22",
+    "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
     "chart.js": "^2.6.0",
     "detect-browser": "^4.6.0",
@@ -33,6 +34,7 @@
     "medium-editor": "^5.23.3",
     "normalize.css": "^8.0.1",
     "popper.js": "^1.15.0",
+    "qs": "^6.8.0",
     "v-tooltip": "^2.0.0-rc.30",
     "vee-validate": "^2.2.13",
     "vue": "^2.6.10",
@@ -40,10 +42,10 @@
     "vue-chartjs": "^3.4.0",
     "vue-clipboard2": "^0.3.0",
     "vue-color": "^2.7.0",
-    "vue-epic-bus": "^0.1.5",
+    "vue-epic-bus": "^0.1.2",
     "vue-gtm": "^2.0.0",
     "vue-router": "^3.0.6",
-    "vue-sweetalert2": "^3.0.1",
+    "vue-sweetalert2": "^2.1.1",
     "vue-yandex-maps": "^0.8.14",
     "vuestic-ui": "0.1.8",
     "vuetable-2": "1.7.5",
